--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ng-apexcharts": "^1.8.0",
     "ng-click-outside2": "^12.0.0",
     "ngx-color-picker": "^15.0.0",
+    "ngx-mat-timepicker": "^16.1.2",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
