--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.6",
     "apexcharts": "^3.44.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
