--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.11",
+    "@angular/material-moment-adapter": "^16.2.12",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -30,6 +31,7 @@
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.8.0",
     "ng-click-outside2": "^12.0.0",
