export to excel from chart

--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,8 @@
                         "allowedCommonJsDependencies": [
                             "bezier-easing",
                             "mousetrap",
-                            "apexcharts"
+                            "apexcharts",
+                            "moment"
                         ],
                         "outputPath": "dist/manage-shop",
                         "index": "src/index.html",
