--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/service-worker": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "apexcharts": "^3.44.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
+    "firebase": "^10.7.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
