--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-color-picker": "^15.0.0",
     "ngx-mat-timepicker": "^16.1.2",
     "ngx-scrollbar": "^13.0.3",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
