--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
                           "src/manifest.webmanifest"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "node_modules/ngx-toastr/toastr.css"
                         ],
                         "scripts": [],
                         "serviceWorker": true,
