--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ng-click-outside2": "^12.0.0",
     "ngx-color-picker": "^15.0.0",
     "ngx-mat-timepicker": "^16.1.2",
+    "ngx-pagination": "^6.0.3",
     "ngx-scrollbar": "^13.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
