--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,10 @@
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
-                          "src/favicon.ico",
-                          "src/assets",
-                          "src/manifest.webmanifest",
-                          "src/firebase-messaging-sw.js",
-                          "src/manifest.json"
+                            "src/favicon.ico",
+                            "src/assets",
+                            "src/manifest.webmanifest",
+                            "src/firebase-messaging-sw.js"
                         ],
                         "styles": [
                             "src/styles.scss",
@@ -108,9 +107,9 @@
                         "tsConfig": "tsconfig.spec.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
-                          "src/favicon.ico",
-                          "src/assets",
-                          "src/manifest.webmanifest"
+                            "src/favicon.ico",
+                            "src/assets",
+                            "src/manifest.webmanifest"
                         ],
                         "styles": [
                             "src/styles.scss"
